# dua_rviz_plugins

./: .gitignore  CMakeLists.txt  README.md  dua_rviz_plugins.xml  package.xml  rviz_custom_plugins.xml
config/: colors.yaml  config.rviz
dae/: backpack.dae  book.dae  fire_hydrant.dae  keyboard.dae  mouse.dae  pottedplant.dae  stop_sign.dae  teddy_bear.dae  traffic_light.dae  umbrella.dae
include/dua_rviz_plugins/: start_stop_panel.hpp  text_pub_panel.hpp  text_sub_panel.hpp  visual_targets_display.hpp
include/dua_rviz_plugins/displays/attitude_indicator/: attitude_indicator_display.hpp  attitude_indicator_widget.hpp
include/dua_rviz_plugins/displays/geo_view/: geo_view_display.hpp
include/dua_rviz_plugins/displays/visual_targets/: visual_targets_display.hpp
include/dua_rviz_plugins/panels/start_stop/: start_stop_panel.hpp
include/dua_rviz_plugins/panels/text_pub/: text_pub_panel.hpp
include/dua_rviz_plugins/panels/text_sub/: text_sub_panel.hpp
include/rviz_custom_plugins/: button_panel.hpp  overlay_text_panel.hpp  visual_targets_display.hpp
launch/: rviz2.launch.py
src/: overlay_text_panel-old.cpp  start_stop_panel.cpp  text_pub_panel.cpp  text_sub_panel.cpp  visual_targets_display.cpp
src/displays/attitude_indicator/: attitude_indicator_display.cpp  attitude_indicator_widget.cpp
src/displays/geo_view/: geo_view_display.cpp
src/displays/visual_targets/: visual_targets_display.cpp
src/panels/start_stop/: start_stop_panel.cpp
src/panels/text_pub/: text_pub_panel.cpp
src/panels/text_sub/: text_sub_panel.cpp
src/rviz_custom_plugins/: CMakeLists.txt  rviz_custom_plugins.xml  visual_targets_display.cpp
src/rviz_custom_plugins/config/: config.rviz
src/rviz_custom_plugins/include/rviz_custom_plugins/: overlay_send_panel.hpp  overlay_text_panel.hpp  visual_targets_display.hpp
src/rviz_custom_plugins/launch/: rviz2.launch.py
src/rviz_custom_plugins/src/rviz_custom_plugins/: button_panel.cpp  overlay_send_panel.cpp  overlay_text_panel.cpp
